--- a/index.html
+++ b/index.html
@@ -1611,94 +1611,100 @@
         /* Mobile Responsiveness Improvements */
         @media (max-width: 768px) {
             .newspaper-container {
-                padding: 10px;
+                padding: 8px;
                 height: 100vh;
                 overflow-y: auto;
+                /* Account for mobile browser UI */
+                min-height: calc(100vh - 120px);
             }
 
             .header {
-                padding-bottom: 8px;
-                margin-bottom: 10px;
+                padding-bottom: 6px;
+                margin-bottom: 8px;
             }
 
             .newspaper-title {
-                font-size: 18px;
+                font-size: 16px;
                 letter-spacing: 1px;
             }
 
             .quote-container {
-                padding: 10px 0;
-                margin-bottom: 10px;
+                padding: 8px 0;
+                margin-bottom: 8px;
             }
 
             .quote-text {
-                font-size: 16px;
-                line-height: 1.4;
-                padding: 0 8px;
-                margin-bottom: 12px;
+                font-size: 14px;
+                line-height: 1.3;
+                padding: 0 6px;
+                margin-bottom: 8px;
             }
 
             .author {
-                font-size: 14px;
-                padding-top: 8px;
+                font-size: 12px;
+                padding-top: 6px;
+                /* Handle long author names */
+                word-wrap: break-word;
+                hyphens: auto;
+                max-width: 100%;
             }
 
             /* Compact Input Area for Mobile */
             .input-area {
-                padding: 12px;
-                min-height: 160px;
-                margin-bottom: 10px;
+                padding: 10px;
+                min-height: 140px;
+                margin-bottom: 8px;
             }
 
             .input-title {
-                font-size: 16px;
-                margin-bottom: 10px;
+                font-size: 14px;
+                margin-bottom: 8px;
             }
 
             /* Compact Touch Targets for Mobile */
             .letter-cells {
-                gap: 6px;
-                margin-bottom: 12px;
+                gap: 5px;
+                margin-bottom: 10px;
                 justify-content: center;
                 flex-wrap: wrap;
             }
 
             .letter-cell {
-                width: 50px;
-                height: 50px;
-                font-size: 22px;
+                width: 45px;
+                height: 45px;
+                font-size: 20px;
                 border-width: 2px;
                 border-radius: 6px;
                 /* Improved touch target */
-                min-height: 50px;
-                min-width: 50px;
+                min-height: 45px;
+                min-width: 45px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
             }
 
             .letter-cell:after {
-                bottom: 6px;
+                bottom: 5px;
                 height: 2px;
             }
 
             /* Compact Letter Buttons for Mobile */
             .available-letters {
-                gap: 6px;
-                margin-bottom: 12px;
-                padding: 8px;
+                gap: 5px;
+                margin-bottom: 10px;
+                padding: 6px;
                 justify-content: center;
             }
 
             .letter-btn {
-                width: 50px;
-                height: 50px;
-                font-size: 22px;
+                width: 45px;
+                height: 45px;
+                font-size: 20px;
                 border-width: 2px;
                 border-radius: 6px;
                 /* Improved touch target */
-                min-height: 50px;
-                min-width: 50px;
+                min-height: 45px;
+                min-width: 45px;
                 /* Better touch feedback */
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
                 transition: all 0.15s ease;
@@ -1711,24 +1717,24 @@
 
             /* Compact Controls for Mobile */
             .controls {
-                gap: 8px;
-                margin-top: 12px;
+                gap: 6px;
+                margin-top: 10px;
                 flex-wrap: wrap;
                 justify-content: center;
             }
 
             .btn {
-                padding: 8px 16px;
-                font-size: 14px;
+                padding: 6px 12px;
+                font-size: 13px;
                 border-width: 2px;
                 border-radius: 6px;
                 /* Better touch target */
-                min-height: 40px;
-                min-width: 70px;
+                min-height: 36px;
+                min-width: 60px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                gap: 6px;
+                gap: 5px;
             }
 
             /* Mobile Menu Improvements */
@@ -1738,11 +1744,11 @@
             }
 
             .menu-item {
-                padding: 14px 20px;
+                padding: 12px 20px;
             }
 
             .menu-item-label {
-                font-size: 15px;
+                font-size: 14px;
             }
 
             /* Modal Improvements for Mobile */
@@ -1755,103 +1761,109 @@
 
             /* Quote Word Improvements for Mobile */
             .quote-word.scrambled {
-                padding: 4px 8px;
-                margin: 0 2px;
-                font-size: 16px;
-                /* Better touch target */
-                min-height: 36px;
-                display: inline-flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .author.scrambled {
-                padding: 6px 16px;
-                font-size: 14px;
-                /* Better touch target */
-                min-height: 36px;
-                display: inline-flex;
-                align-items: center;
-                justify-content: center;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .newspaper-container {
-                padding: 8px;
-            }
-
-            .newspaper-title {
-                font-size: 16px;
-            }
-
-            .quote-text {
-                font-size: 14px;
-                line-height: 1.3;
-                padding: 0 4px;
-                margin-bottom: 8px;
-            }
-
-            .author {
-                font-size: 12px;
-            }
-
-            /* Even More Compact Touch Targets for Small Mobile */
-            .letter-cells {
-                gap: 4px;
-                margin-bottom: 10px;
-            }
-
-            .letter-cell {
-                width: 45px;
-                height: 45px;
-                font-size: 20px;
-                border-width: 2px;
-                border-radius: 6px;
-                min-height: 45px;
-                min-width: 45px;
-            }
-
-            .available-letters {
-                gap: 4px;
-                padding: 6px;
-            }
-
-            .letter-btn {
-                width: 45px;
-                height: 45px;
-                font-size: 20px;
-                border-width: 2px;
-                border-radius: 6px;
-                min-height: 45px;
-                min-width: 45px;
-            }
-
-            /* Compact Controls for Small Mobile */
-            .controls {
-                gap: 6px;
-                margin-top: 10px;
-            }
-
-            .btn {
-                padding: 6px 12px;
-                font-size: 13px;
-                min-height: 36px;
-                min-width: 60px;
-            }
-
-            /* Quote Word Improvements for Small Mobile */
-            .quote-word.scrambled {
                 padding: 3px 6px;
                 margin: 0 1px;
                 font-size: 14px;
+                /* Better touch target */
                 min-height: 32px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .author.scrambled {
                 padding: 4px 12px;
                 font-size: 12px;
+                /* Better touch target */
                 min-height: 32px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                /* Handle long author names */
+                word-wrap: break-word;
+                hyphens: auto;
+                max-width: 100%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .newspaper-container {
+                padding: 6px;
+                /* Account for mobile browser UI */
+                min-height: calc(100vh - 100px);
+            }
+
+            .newspaper-title {
+                font-size: 14px;
+            }
+
+            .quote-text {
+                font-size: 12px;
+                line-height: 1.2;
+                padding: 0 4px;
+                margin-bottom: 6px;
+            }
+
+            .author {
+                font-size: 10px;
+            }
+
+            /* Even More Compact Touch Targets for Small Mobile */
+            .letter-cells {
+                gap: 3px;
+                margin-bottom: 8px;
+            }
+
+            .letter-cell {
+                width: 40px;
+                height: 40px;
+                font-size: 18px;
+                border-width: 2px;
+                border-radius: 6px;
+                min-height: 40px;
+                min-width: 40px;
+            }
+
+            .available-letters {
+                gap: 3px;
+                padding: 4px;
+            }
+
+            .letter-btn {
+                width: 40px;
+                height: 40px;
+                font-size: 18px;
+                border-width: 2px;
+                border-radius: 6px;
+                min-height: 40px;
+                min-width: 40px;
+            }
+
+            /* Compact Controls for Small Mobile */
+            .controls {
+                gap: 4px;
+                margin-top: 8px;
+            }
+
+            .btn {
+                padding: 5px 10px;
+                font-size: 12px;
+                min-height: 32px;
+                min-width: 50px;
+            }
+
+            /* Quote Word Improvements for Small Mobile */
+            .quote-word.scrambled {
+                padding: 2px 4px;
+                margin: 0 1px;
+                font-size: 12px;
+                min-height: 28px;
+            }
+
+            .author.scrambled {
+                padding: 3px 8px;
+                font-size: 10px;
+                min-height: 28px;
             }
 
             /* Modal Improvements for Small Mobile */
@@ -1864,56 +1876,6 @@
             .slide-menu {
                 width: 90%;
             }
-        }
-
-        @media (max-width: 360px) {
-            /* Ultra Compact Mobile Optimizations */
-            .letter-cell,
-            .letter-btn {
-                width: 40px;
-                height: 40px;
-                font-size: 18px;
-                min-height: 40px;
-                min-width: 40px;
-            }
-
-            .available-letters {
-                gap: 3px;
-                padding: 4px;
-            }
-
-            .letter-cells {
-                gap: 3px;
-            }
-
-            .btn {
-                padding: 5px 10px;
-                font-size: 12px;
-                min-height: 32px;
-                min-width: 50px;
-            }
-
-            .quote-word.scrambled {
-                padding: 2px 4px;
-                font-size: 12px;
-                min-height: 28px;
-            }
-
-            .author.scrambled {
-                padding: 3px 8px;
-                font-size: 10px;
-                min-height: 28px;
-            }
-
-            .quote-text {
-                font-size: 12px;
-                line-height: 1.2;
-                margin-bottom: 6px;
-            }
-
-            .author {
-                font-size: 10px;
-            }
 
             .input-area {
                 padding: 8px;
@@ -1921,8 +1883,88 @@
             }
 
             .input-title {
-                font-size: 14px;
-                margin-bottom: 8px;
+                font-size: 12px;
+                margin-bottom: 6px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            /* Ultra Compact Mobile Optimizations */
+            .newspaper-container {
+                padding: 4px;
+                /* Account for mobile browser UI */
+                min-height: calc(100vh - 80px);
+            }
+
+            .letter-cell,
+            .letter-btn {
+                width: 35px;
+                height: 35px;
+                font-size: 16px;
+                min-height: 35px;
+                min-width: 35px;
+            }
+
+            .available-letters {
+                gap: 2px;
+                padding: 3px;
+            }
+
+            .letter-cells {
+                gap: 2px;
+            }
+
+            .btn {
+                padding: 4px 8px;
+                font-size: 11px;
+                min-height: 28px;
+                min-width: 45px;
+            }
+
+            .quote-word.scrambled {
+                padding: 1px 3px;
+                font-size: 10px;
+                min-height: 24px;
+            }
+
+            .author.scrambled {
+                padding: 2px 6px;
+                font-size: 9px;
+                min-height: 24px;
+            }
+
+            .quote-text {
+                font-size: 10px;
+                line-height: 1.1;
+                margin-bottom: 4px;
+            }
+
+            .author {
+                font-size: 9px;
+            }
+
+            .input-area {
+                padding: 6px;
+                min-height: 100px;
+            }
+
+            .input-title {
+                font-size: 11px;
+                margin-bottom: 5px;
+            }
+
+            .header {
+                padding-bottom: 4px;
+                margin-bottom: 4px;
+            }
+
+            .newspaper-title {
+                font-size: 12px;
+            }
+
+            .quote-container {
+                padding: 4px 0;
+                margin-bottom: 4px;
             }
         }
 
@@ -1988,95 +2030,101 @@
             .newspaper-container {
                 height: 100vh;
                 overflow-y: auto;
-                padding: 5px;
+                padding: 3px;
+                /* Account for mobile browser UI in landscape */
+                min-height: calc(100vh - 60px);
             }
 
             .header {
-                padding-bottom: 5px;
-                margin-bottom: 5px;
+                padding-bottom: 3px;
+                margin-bottom: 3px;
             }
 
             .newspaper-title {
-                font-size: 14px;
+                font-size: 12px;
             }
 
             .quote-container {
-                padding: 5px 0;
-                margin-bottom: 5px;
+                padding: 3px 0;
+                margin-bottom: 3px;
             }
 
             .quote-text {
-                font-size: 12px;
-                line-height: 1.2;
-                margin-bottom: 8px;
-                padding: 0 4px;
+                font-size: 10px;
+                line-height: 1.1;
+                margin-bottom: 4px;
+                padding: 0 2px;
             }
 
             .author {
-                font-size: 10px;
-                padding-top: 4px;
+                font-size: 8px;
+                padding-top: 2px;
+                /* Handle long author names in landscape */
+                word-wrap: break-word;
+                hyphens: auto;
+                max-width: 100%;
             }
 
             .input-area {
-                padding: 6px;
-                min-height: 100px;
-                margin-bottom: 5px;
+                padding: 4px;
+                min-height: 80px;
+                margin-bottom: 3px;
             }
 
             .input-title {
-                font-size: 12px;
-                margin-bottom: 6px;
+                font-size: 10px;
+                margin-bottom: 4px;
             }
 
             .letter-cells {
-                gap: 3px;
-                margin-bottom: 8px;
+                gap: 2px;
+                margin-bottom: 4px;
             }
 
             .letter-cell {
-                width: 35px;
-                height: 35px;
-                font-size: 16px;
-                min-height: 35px;
-                min-width: 35px;
+                width: 30px;
+                height: 30px;
+                font-size: 14px;
+                min-height: 30px;
+                min-width: 30px;
             }
 
             .available-letters {
-                gap: 3px;
-                margin-bottom: 8px;
-                padding: 4px;
+                gap: 2px;
+                margin-bottom: 4px;
+                padding: 2px;
             }
 
             .letter-btn {
-                width: 35px;
-                height: 35px;
-                font-size: 16px;
-                min-height: 35px;
-                min-width: 35px;
+                width: 30px;
+                height: 30px;
+                font-size: 14px;
+                min-height: 30px;
+                min-width: 30px;
             }
 
             .controls {
-                gap: 4px;
-                margin-top: 6px;
+                gap: 2px;
+                margin-top: 4px;
             }
 
             .btn {
-                padding: 4px 8px;
-                font-size: 11px;
-                min-height: 28px;
-                min-width: 50px;
+                padding: 2px 6px;
+                font-size: 9px;
+                min-height: 24px;
+                min-width: 40px;
             }
 
             .quote-word.scrambled {
-                padding: 2px 4px;
-                font-size: 12px;
-                min-height: 24px;
+                padding: 1px 2px;
+                font-size: 10px;
+                min-height: 20px;
             }
 
             .author.scrambled {
-                padding: 2px 8px;
-                font-size: 10px;
-                min-height: 24px;
+                padding: 1px 4px;
+                font-size: 8px;
+                min-height: 20px;
             }
         }
 
