more viewport changes

--- a/index.html
+++ b/index.html
@@ -1787,6 +1787,44 @@
                 hyphens: auto;
                 max-width: 100%;
             }
+
+            /* Reduced Statistics Size for Mobile */
+            .congrats-stats {
+                gap: 15px;
+                margin: 20px 0;
+            }
+
+            .stat-item {
+                padding: 12px;
+            }
+
+            .stat-value {
+                font-size: 20px;
+                margin-bottom: 4px;
+            }
+
+            .stat-label {
+                font-size: 10px;
+            }
+
+            /* Stats Modal - Reduced Size */
+            .stats-grid {
+                gap: 15px;
+                margin: 20px 0;
+            }
+
+            .stat-card {
+                padding: 15px;
+            }
+
+            .stat-card .stat-value {
+                font-size: 28px;
+                margin: 8px 0;
+            }
+
+            .stat-card .stat-label {
+                font-size: 14px;
+            }
         }
 
         @media (max-width: 480px) {
@@ -1796,8 +1834,18 @@
                 height: 100dvh;
             }
 
+            .header {
+                padding-bottom: 8px;
+                margin-bottom: 6px;
+            }
+
             .newspaper-title {
-                font-size: 14px;
+                font-size: 18px;
+            }
+
+            .quote-container {
+                padding: 4px 0;
+                margin-bottom: 4px;
             }
 
             .quote-text {
@@ -1809,6 +1857,44 @@
 
             .author {
                 font-size: 10px;
+            }
+
+            /* Reduced Statistics Size for Small Mobile */
+            .congrats-stats {
+                gap: 12px;
+                margin: 15px 0;
+            }
+
+            .stat-item {
+                padding: 10px;
+            }
+
+            .stat-value {
+                font-size: 18px;
+                margin-bottom: 3px;
+            }
+
+            .stat-label {
+                font-size: 9px;
+            }
+
+            /* Stats Modal - Reduced Size for Small Mobile */
+            .stats-grid {
+                gap: 12px;
+                margin: 15px 0;
+            }
+
+            .stat-card {
+                padding: 12px;
+            }
+
+            .stat-card .stat-value {
+                font-size: 24px;
+                margin: 6px 0;
+            }
+
+            .stat-card .stat-label {
+                font-size: 12px;
             }
 
             /* Even More Compact Touch Targets for Small Mobile */
@@ -1900,17 +1986,55 @@
             }
 
             .header {
-                padding-bottom: 4px;
+                padding-bottom: 6px;
                 margin-bottom: 4px;
             }
 
             .newspaper-title {
-                font-size: 12px;
+                font-size: 16px;
             }
 
             .quote-container {
-                padding: 4px 0;
-                margin-bottom: 4px;
+                padding: 3px 0;
+                margin-bottom: 3px;
+            }
+
+            /* Reduced Statistics Size for Ultra Small Mobile */
+            .congrats-stats {
+                gap: 10px;
+                margin: 12px 0;
+            }
+
+            .stat-item {
+                padding: 8px;
+            }
+
+            .stat-value {
+                font-size: 16px;
+                margin-bottom: 2px;
+            }
+
+            .stat-label {
+                font-size: 8px;
+            }
+
+            /* Stats Modal - Reduced Size for Ultra Small Mobile */
+            .stats-grid {
+                gap: 10px;
+                margin: 12px 0;
+            }
+
+            .stat-card {
+                padding: 10px;
+            }
+
+            .stat-card .stat-value {
+                font-size: 20px;
+                margin: 5px 0;
+            }
+
+            .stat-card .stat-label {
+                font-size: 10px;
             }
 
             .letter-cell,
